# DeepContext

./: .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  index.html  pyproject.toml
.agents/skills/DeepContext/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json  launch.json  settings.local.json
.claude/commands/: feature-development.md  refactoring.md
.claude/homunculus/instincts/inherited/: DeepContext-instincts.yaml
.claude/skills/DeepContext/: SKILL.md
.codex/: AGENTS.md
alembic/: env.py  script.py.mako
alembic/versions/: 2026_02_21_001_initial_schema.py
assets/: index-B4dhVS22.css  index-B8pvflqd.js  index-BClMR66i.js  index-BMP4XbAr.css  index-BSUF2YvI.js  index-BTlldeUx.js  index-Bcs0NU39.css  index-CniWgc27.css  index-CtS9v_Q3.js  index-D7vDbYrS.css  index-DI2OnuTx.js  index-DVg8m5TI.js  index-IeqyEK5U.js  index-XGfGK5bM.js  react-force-graph-2d--zFGOSI2.js  react-force-graph-2d-D8MpnTvm.js  react-force-graph-2d-YUEEKtz5.js  react-force-graph-3d-BlhEQgxz.js  react-force-graph-3d-CTsDeRKC.js  react-force-graph-3d-KSrhUEji.js
docs/stitch/dashboard_graph_memories/: code.html
docs/stitch/dashboard_lifecycle_docs/: code.html
docs/stitch/dashboard_stats_chat/: code.html
docs/stitch/deepcontext_technical/: DESIGN.md
docs/stitch/landing_page/: code.html
docs/stitch/refined_landing_page_hero/: code.html
docs/superpowers/plans/: 2026-03-21-premium-saas-redesign.md
docs/superpowers/specs/: 2026-03-21-premium-saas-redesign-design.md
examples/: chat_demo.py
src/deepcontext/: __init__.py
src/deepcontext/api/: __init__.py  auth.py  server.py
src/deepcontext/api/static/: index.html
src/deepcontext/core/: __init__.py  clients.py  settings.py  types.py
src/deepcontext/db/: __init__.py  database.py
src/deepcontext/db/models/: base.py  graph.py  memory.py  user.py
src/deepcontext/extraction/: __init__.py  extractor.py  prompts.py
src/deepcontext/graph/: __init__.py  knowledge_graph.py
src/deepcontext/lifecycle/: __init__.py  manager.py
src/deepcontext/memory/: __init__.py  engine.py
src/deepcontext/retrieval/: __init__.py  hybrid.py
src/deepcontext/vectorstore/: __init__.py  base.py  pgvector_store.py
tests/: conftest.py  test_api.py  test_core.py  test_database.py  test_edge_cases.py  test_engine_integration.py  test_extraction.py  test_graph.py  test_multi_user.py  test_retrieval_lifecycle.py  test_vectorstore.py
website/: index.html  package-lock.json  package.json  vite.config.js
website/src/: App.jsx  index.css  main.jsx
website/src/api/: client.js
website/src/components/: ApiKeySettings.jsx  ChatPanel.jsx  CodeBlock.jsx  CopyButton.jsx  EmptyState.jsx  ErrorBanner.jsx  Footer.jsx  GraphViz.jsx  LifecycleControls.jsx  MemoryBrowser.jsx  MobileMenu.jsx  Navbar.jsx  ProgressBar.jsx  ProtectedRoute.jsx  Sidebar.jsx  Skeleton.jsx  SlidePanel.jsx  StatsCards.jsx  ThemeToggle.jsx
website/src/context/: AuthContext.jsx  ThemeContext.jsx  ToastContext.jsx
website/src/pages/: Dashboard.jsx  Demo.jsx  Docs.jsx  Home.jsx  Login.jsx  Settings.jsx
website/src/pages/dashboard/: ChatPage.jsx  GraphPage.jsx  LifecyclePage.jsx  MemoriesPage.jsx  StatsPage.jsx
website/src/styles/: animations.css  code.css  components.css  index.css  layout.css  reset.css  typography.css  variables.css
website/src/styles/pages/: auth.css  dashboard.css  demo.css  docs.css  home.css
