[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcontext"
version = "0.1.0"
description = "Hierarchical memory system for AI agents - async, graph-aware, with memory consolidation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "DeepContext Contributors" }]
keywords = [
    "ai",
    "memory",
    "llm",
    "openai",
    "context",
    "conversation",
    "long-term-memory",
    "knowledge-graph",
    "vector-search",
    "pgvector",
    "hierarchical-memory",
    "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.40.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "instructor>=1.3.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
]
all = ["deepcontext[api,dev]"]

[project.urls]
Homepage = "https://github.com/yourname/deepcontext"
Repository = "https://github.com/yourname/deepcontext"
Issues = "https://github.com/yourname/deepcontext/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deepcontext = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
